--- a/publications.qmd
+++ b/publications.qmd
@@ -4,7 +4,7 @@ title: "Publications"
 title-block-banner: true
 ---
 
-Below are selected publications and presentations on human-AI interaction, decision-making, and automation in safety-critical environments.
+Below are selected publications and presentations on human-AI interaction, decision-making, and safety-critical automation.
 
 ### Peer reviewed
 
@@ -16,15 +16,19 @@ Below are selected publications and presentations on human-AI interaction, decis
 
 -   **Gentile D.**, Jamieson G. A., Donmez B. (2021). Evaluating Human Understanding in Explainable AI Systems. In *ACM Human Factors in Computing Systems (CHI) Workshop on Operationalizing Human-Centered Perspectives in Explainable AI*, CHI2021, Yokohama, Japan. [Link](https://hfast.mie.utoronto.ca/wp-content/uploads/HCXAI2021_paper_25.pdf)
 
-### In preparation
+### Accepted
 
--   **Gentile D.**, & Jamieson, G. A. (2025). Effects of Automation transparency on human performance under different workload contrainsts. Human Factors.
-
--   Lawson-Jack K., **Gentile D.**, & Jamieson, G. A. (2025). Progress on a Taxonomy of Heterogeneity in Small Modular Reactor Operations. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC&HMIT)*, Chicago.
+-   Lawson-Jack K., **Gentile D.**, & Jamieson, G. A. (2025). Towards a Taxonomy of Heterogeneity in the Design of Small Modular Reactors and Implications for Human Performance. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC*
 
 -   **Gentile D.**, Liang Y., & Jamieson, G. A. (2025). Assessing Measures of Human Performance in the Nuclear Control Room. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC&HMIT)*, Chicago.
 
--   **Gentile D.**, Jamieson, G. A., & Donmez B. (2023). Influence of Individual Differences on the Effectiveness of Post-hoc Explanations in Automation Reliance Behavior. Submitted to the *Journal of Cognitive Engineering and Decision-Making*.
+### In preparation
+
+-   **Gentile D.**, & Jamieson, G. A. (2025). Human factors challenges in artificial intelligence regulation for nuclear safety.
+
+-   **Gentile D.**, & Jamieson, G. A. (2025). Exploring the effects of transparency strategies on human performance in automated nuclear operations.
+
+-   **Gentile D.**, Jamieson, G. A., & Donmez B. (2023). Influence of Individual Differences on the Effectiveness of Post-hoc Explanations in Automation Reliance Behavior. *Journal of Cognitive Engineering and Decision-Making*.
 
 ### Presentations
 
