--- a/blogposts/asking-causal-questions/index.qmd
+++ b/blogposts/asking-causal-questions/index.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Asking better causal questions"
+title: "Asking better causal questions for statistical inference"
 author: "Davide Gentile"
 date: "2024-09-12"
 #categories: [news]
 ---
 
-This is the first post in a Quarto blog. Welcome!
+This blog post is currently being prepared.
