--- a/blogposts/conducting a socio-technical evaluation/index.qmd
+++ b/blogposts/conducting a socio-technical evaluation/index.qmd
@@ -1,12 +1,8 @@
 ---
-title: "Evaluating joint human-automation performance"
+title: "How to evaluate joint human-AI performance"
 author: "Davide Gentile"
-date: "2024-09-12"
+date: "2025-01-17"
 categories: [methods]
 ---
 
-This is the first post in a Quarto blog. Welcome!
-
-![](thumbnail.jpg)
-
-Since this post doesn't specify an explicit `image`, the first image in the post will be used in the listing page of posts.
+This blogpost is currently being prepared.
