--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ about:
       #icon: journal-text
 ---
 
-I am a research scientist specializing in human-automation interaction within safety-critical systems, with eight years of experience spanning academia, industry, and independent research. My work focuses on designing computational technologies that augment human decisions and safety rather than replace human input. My methods involve human-in-the-loop simulations, controlled experiments, human performance measurement, applied statistics, and machine learning.
+I am a research scientist specializing in human-automation interaction within safety-critical systems, with eight years of experience spanning academia, industry, and research institutes. My work focuses on designing computational technologies that augment human decisions and safety rather than replace human input. My methods involve human-in-the-loop simulations, controlled experiments, human performance measurement, applied statistics, and machine learning.
 
 I am currently Team Lead of Analysis and Experimentation at the University of Toronto, where I lead research projects focused on human-automation interaction in nuclear safety. Previously, I was a Data Science Consultant at [Armilla AI](https://www.armilla.ai/) (2024) and held research positions at the [Schwartz Reisman Institute for Technology and Society](https://srinstitute.utoronto.ca/) (2021-2024) and Ericsson\'s [Global AI Accelerator](https://www.mitacs.ca/news/mitacs-ericsson-global-artificial-intelligence-accelerator-gaia-will-welcome-80-research-interns/) (2020-2023). I completed my PhD in 2024, with a [dissertation](https://utoronto.scholaris.ca/items/01bf5af5-98ce-4a35-9a99-3f482c17a5a6) on human-AI collaboration in industrial process control, specifically examining how machine learning explanations impact operator performance, trust, and cognitive workload. A selected list of my publication is available [here](publications.qmd).
 
