--- a/about.qmd
+++ b/about.qmd
@@ -1,45 +1,21 @@
 ---
-title: "Davide Gentile"
-subtitle: "Human Factors & AI consultant"
+#title: "Davide Gentile"
+#subtitle: "Human Factors & AI Research"
 about:
-  template: trestles
+  template: solana
   image: images/profile2.jpg
-  image-width: 10em
+  image-width: 11em
   image-shape: round
-  links:
-     - icon: journal-text
-       text: Read My Publications
-       href: publications.qmd
+  #links:
+     #- icon: journal-text
+       #text: Read My Publications
+       #href: publications.qmd
        #href: https://drive.google.com/file/d/1F6_UB4iHKw_8KuQkhucVKOdoi_U4X7JW/view?usp=sharing
      #- icon: spotify
        #text: Spotify
        #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-```{=html}
-<!--I specialize in human factors research and data science, focusing on human-AI interaction and decision-making in safety-critical systems. My work integrates human-subjects experimentation, machine learning explainability, and UX research to enhance trust, usability, and performance in high-stakes domains.
-
-As Team Lead at the Cognitive Engineering Laboratory (University of Toronto), I oversee five research projects on human factors in nuclear safety. My [PhD dissertation](https://utoronto.scholaris.ca/items/01bf5af5-98ce-4a35-9a99-3f482c17a5a6) (2024) examines human-AI collaboration in industrial process control, specifically how machine learning explanations influence operator trust, performance, and cognitive workload. You can learn more about my research [here](publications.qmd).
-
-I thrive in cross-functional teams, collaborating to turn data into practical solutions that support user experiences and human performance. My goal is to make automation intuitive and empowering for people. I also dedicate time to [teaching](courses.qmd) and mentoring, particularly in human factors, statistics, and design of experiments. -->
-```
----
-# I specialize in human-AI interaction and decision-making for safety-critical systems. My expertise lies in designing automated systems for high-risk industries like nuclear energy, aerospace, and automation, ensuring that AI supports, rather than replaces, human decision-making.
-# 
-# As Team Lead at the Cognitive Engineering Laboratory (University of Toronto), I oversee five research projects on human factors in nuclear safety. My PhD dissertation (2024) examined human-AI collaboration in industrial process control, specifically how machine learning explanations influence operator trust, performance, and cognitive workload. My research has been published in journals such as [Journal Name] and presented at top industry conferences, covering topics like human-AI collaboration, cognitive load, and decision-making in critical systems. You can explore my full list of publications [here].
-# 
-# I provide consulting, research, and training services, including AI explainability assessments, human factors evaluations, and regulatory compliance guidance for industries where safety and performance are paramount. 
-# 
-# Contact me to learn more about how we can work together.
----
-
-Automation should empower human operators, not replace them. I specialize in applying **human factors** and **usability** science to ensure that AI systems in **safety-critical industries** enhance performance, trust, and compliance.
+I specialize in applying human factors and statistical methods to support the design of digital systems in **safety-critical industries**.
 
 I have a background in human-AI interaction, cognitive engineering, and regulatory compliance. I help organizations design **automation that works for people**. My expertise includes machine learning explainability, decision-support design, and usability assessments in high-stakes domains like nuclear energy, aerospace, healthcare, and defense.
-
-I offer **consulting, assessments, and training** to help teams:\
-✔ Improve human-AI collaboration.\
-✔ Align AI explainability with decision-making needs.\
-✔ Meet safety and regulatory standards.
-
-📩 [**Contact me**](mailto:gentiledv@gmail.com) to discuss how we can optimize your human-AI system for usability, trust, and safety.
