--- a/publications.qmd
+++ b/publications.qmd
@@ -4,38 +4,16 @@ title: "Publications"
 title-block-banner: true
 ---
 
-#### Peer reviewed
+-   **Gentile D.**, Liang Y., & Jamieson, G. A. (2025, accepted). Assessing Measures of Human Performance in the Nuclear Control Room. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC&HMIT)*, Chicago.
+
+-   Lawson-Jack K., **Gentile D.**, & Jamieson, G. A. (2025, accepted). Towards a Taxonomy of Heterogeneity in the Design of Small Modular Reactors and Implications for Human Performance. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC&HMIT)*, Chicago.
 
 -   **Gentile D.**, Donmez, B., & Jamieson, G. A. (2025). [Human performance effects of combining counterfactual explanations with normative and contrastive explanations in supervised machine learning for automated decision assistance.](https://www.sciencedirect.com/science/article/pii/S1071581924002179) *International Journal of Human-Computer Studies*, 196, 103434.
 
--   **Gentile D.**, Donmez, B., & Jamieson, G. A. (2023). Human Performance Consequences of Normative and Contrastive Explanations: An Experiment in Machine Learning for Reliability Maintenance. *Artificial Intelligence*, 103945. [Link](https://www.sciencedirect.com/science/article/pii/S0004370223000917)
+-   Gentile D. (2024). [Supporting Human Performance with Post-hoc Explanations in Automated Decision Assistance.](https://utoronto.scholaris.ca/items/01bf5af5-98ce-4a35-9a99-3f482c17a5a6)
 
--   Nguyen, T., **Gentile D.**, Jamieson, G. A., Gosine, R., & Purmhedi, H. (2023). Designing a Glyph-based Polar Chart to Interpret the Results of Machine Learning Models. In *Ergonomics in Design: The Quarterly of Human Factors Applications*. [Link](https://journals.sagepub.com/doi/abs/10.1177/10648046231166047)
+-   **Gentile D.**, Donmez, B., & Jamieson, G. A. (2023). [Human Performance Consequences of Normative and Contrastive Explanations: An Experiment in Machine Learning for Reliability Maintenance](https://www.sciencedirect.com/science/article/pii/S0004370223000917). *Artificial Intelligence*, 103945.
 
--   **Gentile D.**, Jamieson G. A., Donmez B. (2021). Evaluating Human Understanding in Explainable AI Systems. In *ACM Human Factors in Computing Systems (CHI) Workshop on Operationalizing Human-Centered Perspectives in Explainable AI*, CHI2021, Yokohama, Japan. [Link](https://hfast.mie.utoronto.ca/wp-content/uploads/HCXAI2021_paper_25.pdf)
+-   Nguyen, T., **Gentile D.**, Jamieson, G. A., Gosine, R., & Purmhedi, H. (2023). [Designing a Glyph-based Polar Chart to Interpret the Results of Machine Learning Models.](https://journals.sagepub.com/doi/abs/10.1177/10648046231166047) In *Ergonomics in Design: The Quarterly of Human Factors Applications*.
 
-#### Accepted
-
--   **Gentile D.**, Liang Y., & Jamieson, G. A. (2025). Assessing Measures of Human Performance in the Nuclear Control Room. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC&HMIT)*, Chicago.
-
--   Lawson-Jack K., **Gentile D.**, & Jamieson, G. A. (2025). Towards a Taxonomy of Heterogeneity in the Design of Small Modular Reactors and Implications for Human Performance. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC*
-
-#### In preparation
-
--   **Gentile D.**, & Jamieson, G. A. (2025). Human factors challenges in artificial intelligence regulation for nuclear safety.
-
--   **Gentile D.**, & Jamieson, G. A. (2025). Exploring the effects of transparency strategies on human performance in automated nuclear operations.
-
--   **Gentile D.**, Jamieson, G. A., & Donmez B. (2023). Influence of Individual Differences on the Effectiveness of Post-hoc Explanations in Automation Reliance Behavior. *Journal of Cognitive Engineering and Decision-Making*.
-
-#### Presentations
-
--   **Gentile D.**, Jamieson G. A., Donmez B. (2024). Supporting human performance with explanation interfaces in automated decision assistance for process control operations. In *Disruptive, Innovative and Emerging Technologies (DIET) Conference 2024 of the Canadian Nuclear Society (CNS) (organized in cooperation with the International Atomic Energy Agency).*
-
--   **Gentile D.**, Donmez, B., & Jamieson, G. A. (2024). Enhancing Human Performance with Post-hoc Explanations in Machine Learning-based Decision Support Systems. Oral presentation at the *7th International Conference on Intelligent Human Systems Integration: Integrating People and Intelligent Systems*, Palermo, Italy.
-
--   **Gentile D.** (2023). Designing for human-AI interactions in industrial condition monitoring. Oral presentation at the *AI Seminar in GAIA (Global Artificial Intelligence Accelerator)*, Ericsson Montreal, QC.
-
--   **Gentile D.**, Jamieson G. A., Donmez B. (2021). Evaluating human understanding in XAI systems. Oral presentation at the *ACM CHI Workshop on Operationalizing Human-Centered Perspectives in Explainable AI, CHI Conference on Human Factors in Computing Systems (CHI '21)*, Yokohama, Japan (held remotely).
-
--   **Gentile D.** (2020). Human Factors in Explainable AI. Invited panelist at the *2021 Graduate Student Research Showcase*. Faculty of Applied Science and Engineering, University of Toronto.
+-   **Gentile D.**, Jamieson G. A., Donmez B. (2021). [Evaluating Human Understanding in Explainable AI Systems.](https://hfast.mie.utoronto.ca/wp-content/uploads/HCXAI2021_paper_25.pdf) In *ACM Human Factors in Computing Systems (CHI) Workshop on Operationalizing Human-Centered Perspectives in Explainable AI*, CHI2021, Yokohama, Japan.
