--- a/about.qmd
+++ b/about.qmd
@@ -5,7 +5,7 @@ about:
   template: solana
   image: images/profile2.jpg
   image-width: 10em
-  #image-shape: round
+  image-shape: round
   #links:
      #- icon: journal-text
        #text: Read My Publications
@@ -16,6 +16,14 @@ about:
        #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-I'm a researcher specializing in human-automation interaction, with experience in the design and evaluation of digital systems in safety-critical industries. My work focuses on improving human performance through automated aids. My methods involve human-in-the-loop simulations, controlled experiments, human performance measurement, applied statistics, and machine learning.
+I am a researcher in human-automation interaction, specializing in human-machine performance evaluation. My work focuses on improving human performance through automated aids in safety-critical industries. My methods involve controlled experiments, applied statistics, and machine learning.
 
 I completed my PhD in 2024 at the University of Toronto with a dissertation on the effects of machine learning explanations on human decisions and performance. Currently, I lead a team of human factors researchers conducting experimental projects on decision automationi in nuclear operations.
+
+Other experiences:
+
+-   Taught statistics
+
+-   Assessed model risk
+
+-   Interdisciplinary research
