--- a/portfolio/trust-ml/index.qmd
+++ b/portfolio/trust-ml/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "A Multidisciplinary Perspective on Trust in Human-ML Interaction"
+title: "Investigating Trust in Human-Machine Learning Interaction"
 author: "Davide Gentile"
-description: "This project explores the role of trust in human interactions with machine learning systems across diverse contexts of use. In collaboration with a multidisciplinary team at the Schwartz Reisman Institute, we examined how warranted and unwarranted trust impacts user adoption, ethics, and related societal effects, highlighting the need for a cross-disciplinary efforts to build more trustworthy and effective machine learning systems."
+description: "Examined how trust influences the effectiveness and adoption of machine learning systems across various contexts."
 date: "2024-10-11"
 image: "trust.jpg"
 categories: [trust, machine learning]
