--- a/portfolio/ux-ericsson/index.qmd
+++ b/portfolio/ux-ericsson/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Development of a Machine Learning Model Interpretability Tool"
+title: "Development of Model Interpretability Tool"
 author: "Davide Gentile"
-description: "During my internship at Ericsson’s Global AI Accelerator, my team developed a glyph-based polar chart (GPC) to enhance the interpretability of machine learning models, enabling easier comparison of model explanations and identification of key variables. Tested with Ericsson's data scientists, the tool helped streamline logical reviews of model outputs."
+description: "During my internship at Ericsson, I contributed to the development of a glyph-based polar chart to enhance the interpretability of machine learning models. "
 date: "2024-06-12"
 image: "picture1.png"
 categories: [UX, Explainable AI]
