--- a/about.qmd
+++ b/about.qmd
@@ -16,6 +16,6 @@ about:
        #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-I am a researcher specialized in human-automation interaction and human-machine performance evaluation. My work focuses on supporting people's tasks and decisions through automated aids in safety-critical industries. I use a mix of methods, but mostly controlled experiments, applied statistics, and machine learning.
+I am a researcher specialized in human-automation interaction and human-machine performance evaluation. My work focuses on supporting people's tasks and decisions through automated aids in safety-critical and highly-regulated industries. I use a mix of methods, but mostly experiments, task/function analysis, statistics, and machine learning.
 
 I completed my PhD in 2024 at the University of Toronto with a dissertation on the effects of machine learning explanations on human decisions and performance. Currently, I lead a team of human factors researchers conducting experimental projects on decision automation in nuclear operations.
