--- a/portfolio/human-ai-collab/index.qmd
+++ b/portfolio/human-ai-collab/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Assessing the Influence of ML Explanations via Human-Subjects Experiments"
+title: "Impact of Machine Learning Explanations on Decision-Making"
 author: "Davide Gentile"
-description: "This project explored how model-agnostic explanations impact decision-making in industrial process control, particularly for condition-based maintenance. Experiments revealed that combining normative and contrastive explanations enhanced decision speed and accuracy, while counterfactuals reduced false alarms, contributing to safer and more efficient AI systems in industrial settings."
+description: "Led and published 3 human-subjects experiments studying how model-agnostic explanations influence decision-making in industrial process control."
 date: "2024-09-16"
 image: "picture1.jpg"
 categories: [human-ai collaboration, predictive maintenance]
