--- a/about.qmd
+++ b/about.qmd
@@ -1,11 +1,11 @@
 ---
-title: "About"
+#title: "About"
 #subtitle: "Human Factors & AI Research"
 about:
   template: solana
-  image: images/profile2.jpg
+  #image: images/profile2.jpg
   image-width: 10em
-  image-shape: round
+  #image-shape: round
   #links:
      #- icon: journal-text
        #text: Read My Publications
@@ -16,6 +16,8 @@ about:
        #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-I am a researcher specialized in human-automation interaction and human-machine performance evaluation. My work focuses on supporting people's tasks and decisions through automated aids in safety-critical and highly-regulated industries. I use a mix of methods, but mostly experiments, task/function analysis, statistics, and machine learning.
+I'm a human factors analyst specialized in safety-critical automation. In the past year, I've been thinking about how AI can be applied in nuclear environments for more efficient operations and augmentation of human work.
 
-I completed my PhD in 2024 at the University of Toronto with a dissertation on the effects of machine learning explanations on human decisions and performance. Currently, I lead a team of human factors researchers conducting experimental projects on decision automation in nuclear operations.
+My background is in human performance, explainability, and industrial operations. In my PhD, I studied how different types of machine learning explanations (normative, contrastive and counterfactual) affect people's decisions, trust, response time and workload in industrial control tasks, specifically condition-based maintenance. This work was published in the *Journal of Artificial Intelligence* and the *International Journal of Human-Computer Studies*.
+
+I like well-defined problems in human-automation interaction. I don't like over-optimism and -pessimism. I write to sharpen my thinking and share what I'm learning.
