--- a/about.qmd
+++ b/about.qmd
@@ -1,11 +1,11 @@
 ---
 #title: ""
-#subtitle: "Human Factors & AI Research"
+#subtitle: "About me"
 about:
   template: solana
-  #image: images/profile2.jpg
+  image: images/profile2.jpg
   image-width: 10em
-  #image-shape: round
+  image-shape: round
   #links:
      #- icon: journal-text
        #text: Read My Publications
@@ -16,8 +16,8 @@ about:
        #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-I'm a human factors analyst specialized in safety-critical automation. In the past year, I've been thinking about how AI can be applied in nuclear environments for more efficient operations and augmentation of human work.
+I'm a human factors analyst specialized in safety-critical automation.
 
-My background is in human performance, explainability, and industrial operations. In my PhD, I studied how different types of machine learning explanations (normative, contrastive and counterfactual) affect people's decisions, trust, response time and workload in industrial control tasks, specifically condition-based maintenance. This work was published in the *Journal of Artificial Intelligence* and the *International Journal of Human-Computer Studies*.
+My background is in human performance, explainability, and industrial operations. In my PhD, I studied how different types of machine learning explanations (normative, contrastive and counterfactual) affect people's ability to detect AI errors in industrial process control, specifically condition-based maintenance. This work was published in the *Journal of Artificial Intelligence* and the *International Journal of Human-Computer Studies*.
 
 I like well-defined problems in human-automation interaction. I don't like over-optimism and -pessimism. I write to sharpen my thinking and share what I'm learning.
