--- a/about.qmd
+++ b/about.qmd
@@ -3,7 +3,7 @@
 #subtitle: "About me"
 about:
   template: solana
-  image: images/profile2.jpg
+  #image: images/profile2.jpg
   image-width: 10em
   image-shape: round
   #links:
