--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ about:
     #- text: Projects
       #href: projects.qmd
       #icon: boxes
-    - text: Read my memos
+    - text: Memos
       href: blog.qmd
       #icon: pencil
     #- text: Courses
@@ -18,4 +18,4 @@ about:
       #icon: clipboard-data
 ---
 
-I work at the intersection of human systems, critical infrastructure, and emerging technologies. Lately I've been thinking about how AI can be applied in nuclear environments for more efficient operations and augmentation of human work.
+I help organizations understand how automation impacts human performance in safety-critical systems. My focus is on ensuring technology supports and doesn't undermine human decision-making. Lately, I\'ve been exploring how AI can be leveraged in nuclear environments to improve operational efficiency and augment human work.
